Fix: Install python3-setuptools in GitHub Actions workflow
- Added python3-setuptools and python3-pip to dnf install step
- These are needed to satisfy BuildRequires in spec file
- Build should now succeed

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          dnf install -y rpm-build rpmdevtools python3-devel tar gzip
+          dnf install -y rpm-build rpmdevtools python3-devel python3-setuptools python3-pip tar gzip
 
       - name: Set up RPM build environment
         run: |
