feat: Add Docker Hub publishing automation
- Add GitHub Actions workflow for automated Docker Hub publishing
- Build multi-platform images (amd64, arm64) on releases
- Update all scripts to pull from Docker Hub by default
- Add --local flag to helper scripts for local builds
- Add Docker Hub badge to README
- Update documentation with Docker Hub instructions

Users can now run:
  docker pull op88/capture:latest
  ./docker-run-linux.sh

No 5-minute build required! Workflow automatically publishes
on version tags and manual dispatch.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,14 @@ version: '3.8'
 
 services:
   capture:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: capture:latest
+    # Option 1: Use pre-built image from Docker Hub (recommended)
+    image: op88/capture:latest
+    
+    # Option 2: Build from local Dockerfile
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
+    # image: capture:latest
     container_name: capture
     network_mode: host
     environment:
