fix: Update Docker Hub username from op88 to oqq0w3efq
- Updated GitHub Actions workflow to push to oqq0w3efq/capture
- Fixed all documentation (README, DOCKER.md)
- Updated docker-compose.yml and helper scripts
- Corrected Docker Hub badge in README

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ permissions:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: op88/capture
+  IMAGE_NAME: oqq0w3efq/capture
 
 jobs:
   build-and-push:
