--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ permissions:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: oqq0w3efq/capture
+  IMAGE_NAME: ogq0w3efq/capture
 
 jobs:
   build-and-push:
