--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ PyQt6>=6.6.0
 PyQt6-Qt6>=6.6.0
 
 # Image Processing
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 Pillow>=10.1.0
 
 # Database
